--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   </head>
   
   <body>
-  
-    <div class="juxtapose" data-startingposition="50" data-showlabels="true" data-showcredits="true" data-animate="true" data-mode="horizontal">
-      <img src="http://timelyportfolio.github.io/coursera_maps_geospatial/maps/alabama_1924_edit.png" data-label="1924" data-credit="http://www.archives.state.al.us/">
-      <img src="http://timelyportfolio.github.io/coursera_maps_geospatial/maps/alabama_1999_edit.png" data-label="1999" data-credit="http://www.archives.state.al.us/">
+    <div class = "container" style="height:70%">
+      <div class="juxtapose" data-startingposition="50" data-showlabels="true" data-showcredits="true" data-animate="true" data-mode="horizontal" style = "height:50%;">
+        <img src="http://timelyportfolio.github.io/coursera_maps_geospatial/maps/alabama_1924_edit.png" data-label="1924" data-credit="http://www.archives.state.al.us/">
+        <img src="http://timelyportfolio.github.io/coursera_maps_geospatial/maps/alabama_1999_edit.png" data-label="1999" data-credit="http://www.archives.state.al.us/">
+      </div>
     </div>
     
     <link rel="stylesheet" href="//s3.amazonaws.com/cdn.knightlab.com/libs/juxtapose/latest/css/juxtapose.css">
