--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   </head>
   
   <body>
-    <div class = "container" style="height:70%">
+    <div class = "container" style="width:400px">
       <div class="juxtapose" data-startingposition="50" data-showlabels="true" data-showcredits="true" data-animate="true" data-mode="horizontal" style = "height:50%;">
         <img src="http://timelyportfolio.github.io/coursera_maps_geospatial/maps/alabama_1924_edit.png" data-label="1924" data-credit="http://www.archives.state.al.us/">
         <img src="http://timelyportfolio.github.io/coursera_maps_geospatial/maps/alabama_1999_edit.png" data-label="1999" data-credit="http://www.archives.state.al.us/">
       </div>
     </div>
     
-    <link rel="stylesheet" href="//s3.amazonaws.com/cdn.knightlab.com/libs/juxtapose/latest/css/juxtapose.css">
-    <script type="text/javascript" src="//s3.amazonaws.com/cdn.knightlab.com/libs/juxtapose/latest/js/juxtapose.js"></script>
+    <link rel="stylesheet" href="./juxtapose/juxtapose.css">
+    <script type="text/javascript" src="./juxtapose/juxtapose.js"></script>
   </body>
 
 </html>
